@@ -24,6 +24,7 @@ import org.apache.http.impl.conn.PoolingHttpClientConnectionManager;
 import org.apache.http.util.EntityUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.elasticsearch.packaging.test.PackagingTestCase;
 
 import java.io.IOException;
 import java.io.InputStream;
@@ -35,7 +36,6 @@ import java.nio.file.Path;
 import java.security.KeyStore;
 import java.security.cert.CertificateFactory;
 import java.security.cert.X509Certificate;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -47,12 +47,13 @@ import javax.net.ssl.KeyManagerFactory;
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.TrustManagerFactory;
 
-import static java.nio.file.StandardOpenOption.APPEND;
-import static java.nio.file.StandardOpenOption.CREATE;
 import static java.nio.file.StandardOpenOption.TRUNCATE_EXISTING;
+import static org.elasticsearch.packaging.util.docker.Docker.copyFromContainer;
 import static org.elasticsearch.packaging.util.docker.Docker.dockerShell;
+import static org.elasticsearch.packaging.util.docker.Docker.findInContainer;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.is;
 
 public class ServerUtils {
 
@@ -64,9 +65,10 @@ public class ServerUtils {
     private static final long waitTime = TimeUnit.MINUTES.toMillis(3);
     private static final long timeoutLength = TimeUnit.SECONDS.toMillis(30);
     private static final long requestInterval = TimeUnit.SECONDS.toMillis(5);
+    private static final long dockerWaitForSecurityIndex = TimeUnit.SECONDS.toMillis(25);
 
     public static void waitForElasticsearch(Installation installation) throws Exception {
-        boolean securityEnabled;
+        final boolean securityEnabled;
 
         if (installation.distribution.isDocker() == false) {
             Path configFilePath = installation.config("elasticsearch.yml");
@@ -85,12 +87,14 @@ public class ServerUtils {
         }
 
         if (securityEnabled) {
+            logger.info("Waiting for elasticsearch WITH Security enabled");
             // with security enabled, we may or may not have setup a user/pass, so we use a more generic port being available check.
             // this isn't as good as a health check, but long term all this waiting should go away when node startup does not
             // make the http port available until the system is really ready to serve requests
-            waitForXpack();
+            waitForXpack(installation);
         } else {
-            waitForElasticsearch("green", null, installation, null, null);
+            logger.info("Waiting for elasticsearch WITHOUT Security enabled");
+            waitForElasticsearch("green", null, installation, null, null, null);
         }
     }
 
@@ -141,8 +145,8 @@ public class ServerUtils {
         return executor.execute(request).returnResponse();
     }
 
-    // polls every second for Elasticsearch to be running on 9200
-    private static void waitForXpack() {
+    // polls every two seconds for Elasticsearch to be running on 9200
+    private static void waitForXpack(Installation installation) {
         int retries = 60;
         while (retries > 0) {
             retries -= 1;
@@ -151,31 +155,81 @@ public class ServerUtils {
             } catch (IOException e) {
                 // ignore, only want to establish a connection
             }
+
             try {
-                Thread.sleep(1000);
+                Thread.sleep(2000);
             } catch (InterruptedException interrupted) {
                 Thread.currentThread().interrupt();
                 return;
             }
         }
+        if (installation != null) {
+            FileUtils.logAllLogs(installation.logs, logger);
+        }
+
         throw new RuntimeException("Elasticsearch (with x-pack) did not start");
     }
 
-    public static void waitForElasticsearch(String status, String index, Installation installation, String username, String password)
-        throws Exception {
+    public static Path getCaCert(Installation installation) throws IOException {
+        if (installation.distribution.isDocker()) {
+            final Path tempDir = PackagingTestCase.createTempDir("docker-ssl");
+            final Path autoConfigurationDir = findInContainer(installation.config, "d", "\"tls_auto_config_*\"");
+            if (autoConfigurationDir != null) {
+                final Path hostHttpCaCert = tempDir.resolve("http_ca.crt");
+                copyFromContainer(autoConfigurationDir.resolve("http_ca.crt"), hostHttpCaCert);
+                return hostHttpCaCert;
+            } else {
+                return null;
+            }
+        } else {
+            return getCaCert(installation.config);
+        }
+    }
 
+    public static Path getCaCert(Path configPath) throws IOException {
+        boolean enrollmentEnabled = false;
+        boolean httpSslEnabled = false;
+        Path caCert = configPath.resolve("certs").resolve("ca").resolve("ca.crt");
+        Path configFilePath = configPath.resolve("elasticsearch.yml");
+        if (Files.exists(configFilePath)) {
+            // In docker we might not even have a file, and if we do it's not in the host's FS
+            String configFile = Files.readString(configFilePath, StandardCharsets.UTF_8);
+            enrollmentEnabled = configFile.contains("xpack.security.enrollment.enabled: true");
+            httpSslEnabled = configFile.contains("xpack.security.http.ssl.enabled: true");
+        }
+        if (enrollmentEnabled && httpSslEnabled) {
+            assert Files.exists(caCert) == false;
+            List<Path> allAutoconfTLS = FileUtils.lsGlob(configPath, "tls_auto_config_*");
+            assertThat(allAutoconfTLS.size(), is(1));
+            Path autoconfTLSDir = allAutoconfTLS.get(0);
+            caCert = autoconfTLSDir.resolve("http_ca.crt");
+            logger.info("Node has TLS auto-configured [" + caCert + "]");
+            assert Files.exists(caCert);
+        } else if (Files.exists(caCert) == false) {
+            logger.info("No TLS certificate configured");
+            caCert = null; // no cert, so don't use ssl
+        }
+        return caCert;
+    }
+
+    public static void waitForElasticsearch(
+        String status,
+        String index,
+        Installation installation,
+        String username,
+        String password,
+        Path caCert
+    ) throws Exception {
         Objects.requireNonNull(status);
-
+        boolean shouldRetryOnAuthNFailure = false;
         // we loop here rather than letting httpclient handle retries so we can measure the entire waiting time
         final long startTime = System.currentTimeMillis();
         long lastRequest = 0;
         long timeElapsed = 0;
         boolean started = false;
         Throwable thrownException = null;
-
-        Path caCert = installation.config("certs/ca/ca.crt");
-        if (Files.exists(caCert) == false) {
-            caCert = null; // no cert, so don't use ssl
+        if (caCert == null) {
+            caCert = getCaCert(installation);
         }
 
         while (started == false && timeElapsed < waitTime) {
@@ -183,20 +237,35 @@ public class ServerUtils {
                 try {
 
                     final HttpResponse response = execute(
-                        Request.Get("http://localhost:9200/_cluster/health")
+                        Request.Get((caCert != null ? "https" : "http") + "://localhost:9200/_cluster/health")
                             .connectTimeout((int) timeoutLength)
                             .socketTimeout((int) timeoutLength),
                         username,
                         password,
                         caCert
                     );
-
                     if (response.getStatusLine().getStatusCode() >= 300) {
-                        final String statusLine = response.getStatusLine().toString();
-                        final String body = EntityUtils.toString(response.getEntity());
-                        throw new RuntimeException("Connecting to elasticsearch cluster health API failed:\n" + statusLine + "\n" + body);
+                        // We create the security index on startup (in order to create an enrollment token and/or set the elastic password)
+                        // In Docker, even when the ELASTIC_PASSWORD is set, when the security index exists and we get an authN attempt as
+                        // `elastic` , the reserved realm checks the security index first. It can happen that we check the security index
+                        // too early after the security index creation in DockerTests causing an UnavailableShardsException. We retry
+                        // authentication errors for a couple of seconds just to verify this is not the case.
+                        if (installation.distribution.isDocker()
+                            && timeElapsed < dockerWaitForSecurityIndex
+                            && response.getStatusLine().getStatusCode() == 401) {
+                            logger.info(
+                                "Authentication against docker failed (possibly due to UnavailableShardsException for the security index)"
+                                    + ", retrying..."
+                            );
+                            shouldRetryOnAuthNFailure = true;
+                        } else {
+                            final String statusLine = response.getStatusLine().toString();
+                            final String body = EntityUtils.toString(response.getEntity());
+                            throw new RuntimeException(
+                                "Connecting to elasticsearch cluster health API failed:\n" + statusLine + "\n" + body
+                            );
+                        }
                     }
-
                     started = true;
 
                 } catch (IOException e) {
@@ -221,55 +290,59 @@ public class ServerUtils {
             throw new RuntimeException("Elasticsearch did not start", thrownException);
         }
 
-        final String url;
-        if (index == null) {
-            url = "http://localhost:9200/_cluster/health?wait_for_status=" + status + "&timeout=60s&pretty";
-        } else {
-            url = "http://localhost:9200/_cluster/health/" + index + "?wait_for_status=" + status + "&timeout=60s&pretty";
-        }
+        if (shouldRetryOnAuthNFailure == false) {
+            final String url;
+            if (index == null) {
+                url = (caCert != null ? "https" : "http")
+                    + "://localhost:9200/_cluster/health?wait_for_status="
+                    + status
+                    + "&timeout=60s"
+                    + "&pretty";
+            } else {
+                url = (caCert != null ? "https" : "http")
+                    + "://localhost:9200/_cluster/health/"
+                    + index
+                    + "?wait_for_status="
+                    + status
+                    + "&timeout=60s&pretty";
+            }
 
-        final String body = makeRequest(Request.Get(url), username, password, caCert);
-        assertThat("cluster health response must contain desired status", body, containsString(status));
+            final String body = makeRequest(Request.Get(url), username, password, caCert);
+            assertThat("cluster health response must contain desired status", body, containsString(status));
+        }
     }
 
     public static void runElasticsearchTests() throws Exception {
-        makeRequest(
-            Request.Post("http://localhost:9200/library/_doc/1?refresh=true&pretty")
-                .bodyString("{ \"title\": \"Book #1\", \"pages\": 123 }", ContentType.APPLICATION_JSON)
-        );
-
-        makeRequest(
-            Request.Post("http://localhost:9200/library/_doc/2?refresh=true&pretty")
-                .bodyString("{ \"title\": \"Book #2\", \"pages\": 456 }", ContentType.APPLICATION_JSON)
-        );
-
-        String count = makeRequest(Request.Get("http://localhost:9200/_count?pretty"));
-        assertThat(count, containsString("\"count\" : 2"));
-
-        makeRequest(Request.Delete("http://localhost:9200/library"));
+        runElasticsearchTests(null, null, null);
     }
 
-    public static void runElasticsearchTests(String username, String password) throws Exception {
+    public static void runElasticsearchTests(String username, String password, Path caCert) throws Exception {
+
         makeRequest(
-            Request.Post("http://localhost:9200/library/_doc/1?refresh=true&pretty")
+            Request.Post((caCert != null ? "https" : "http") + "://localhost:9200/library/_doc/1?refresh=true&pretty")
                 .bodyString("{ \"title\": \"Book #1\", \"pages\": 123 }", ContentType.APPLICATION_JSON),
             username,
             password,
-            null
+            caCert
         );
 
         makeRequest(
-            Request.Post("http://localhost:9200/library/_doc/2?refresh=true&pretty")
+            Request.Post((caCert != null ? "https" : "http") + "://localhost:9200/library/_doc/2?refresh=true&pretty")
                 .bodyString("{ \"title\": \"Book #2\", \"pages\": 456 }", ContentType.APPLICATION_JSON),
             username,
             password,
-            null
+            caCert
         );
 
-        String count = makeRequest(Request.Get("http://localhost:9200/_count?pretty"), username, password, null);
+        String count = makeRequest(
+            Request.Get((caCert != null ? "https" : "http") + "://localhost:9200/library/_count?pretty"),
+            username,
+            password,
+            caCert
+        );
         assertThat(count, containsString("\"count\" : 2"));
 
-        makeRequest(Request.Delete("http://localhost:9200/library"), username, password, null);
+        makeRequest(Request.Delete((caCert != null ? "https" : "http") + "://localhost:9200/library"), username, password, caCert);
     }
 
     public static String makeRequest(Request request) throws Exception {
@@ -293,44 +366,83 @@ public class ServerUtils {
     }
 
     public static void disableGeoIpDownloader(Installation installation) throws IOException {
-        List<String> yaml = Collections.singletonList("ingest.geoip.downloader.enabled: false");
-        Path yml = installation.config("elasticsearch.yml");
-        try (Stream<String> lines = Files.readAllLines(yml).stream()) {
-            if (lines.noneMatch(s -> s.startsWith("ingest.geoip.downloader.enabled"))) {
-                Files.write(yml, yaml, CREATE, APPEND);
-            }
-        }
+        addSettingToExistingConfiguration(installation, "ingest.geoip.downloader.enabled", "false");
     }
 
     public static void enableGeoIpDownloader(Installation installation) throws IOException {
-        Path yml = installation.config("elasticsearch.yml");
-        List<String> lines;
-        try (Stream<String> allLines = Files.readAllLines(yml).stream()) {
-            lines = allLines.filter(s -> s.startsWith("ingest.geoip.downloader.enabled") == false).collect(Collectors.toList());
-        }
-        Files.write(yml, lines, TRUNCATE_EXISTING);
+        removeSettingFromExistingConfiguration(installation, "ingest.geoip.downloader.enabled");
     }
 
     /**
-     * Explicitly disables security if the existing configuration didn't already have an explicit value for the
-     * xpack.security.enabled setting
+     * Explicitly disables security features
      */
-    public static void possiblyDisableSecurityFeatures(Installation installation) throws IOException {
-        List<String> configLines = Collections.singletonList("xpack.security.enabled: false");
+    public static void disableSecurityFeatures(Installation installation) throws IOException {
+        List<String> disabledSecurityFeatures = List.of(
+            "xpack.security.http.ssl.enabled: false",
+            "xpack.security.transport.ssl.enabled: false",
+            "xpack.security.enabled: false"
+        );
         Path yamlFile = installation.config("elasticsearch.yml");
-        try (Stream<String> lines = Files.readAllLines(yamlFile).stream()) {
-            if (lines.noneMatch(s -> s.startsWith("xpack.security.enabled"))) {
-                Files.write(yamlFile, configLines, CREATE, APPEND);
-            }
+        List<String> lines;
+        try (Stream<String> allLines = Files.readAllLines(yamlFile).stream()) {
+            lines = allLines.filter(l -> l.startsWith("xpack.security.http.ssl") == false)
+                .filter(l -> l.startsWith("xpack.security.transport.ssl") == false)
+                .filter(l -> l.startsWith("xpack.security.enabled:") == false)
+                .collect(Collectors.toList());
         }
+        lines.addAll(disabledSecurityFeatures);
+        Files.write(yamlFile, lines, TRUNCATE_EXISTING);
+
     }
 
     public static void enableSecurityFeatures(Installation installation) throws IOException {
+        removeSettingFromExistingConfiguration(installation, "xpack.security.enabled");
+    }
+
+    public static void disableSecurityAutoConfiguration(Installation installation) throws IOException {
+        addSettingToExistingConfiguration(installation, "xpack.security.autoconfiguration.enabled", "false");
+    }
+
+    public static void enableSecurityAutoConfiguration(Installation installation) throws IOException {
+        removeSettingFromExistingConfiguration(installation, "xpack.security.autoconfiguration.enabled");
+    }
+
+    public static void addSettingToExistingConfiguration(Installation installation, String setting, String value) throws IOException {
         Path yml = installation.config("elasticsearch.yml");
         List<String> lines;
         try (Stream<String> allLines = Files.readAllLines(yml).stream()) {
-            lines = allLines.filter(s -> s.startsWith("xpack.security.enabled") == false).collect(Collectors.toList());
+            lines = allLines.filter(s -> s.startsWith(setting) == false).collect(Collectors.toList());
+        }
+        lines.add(setting + ": " + value);
+        Files.write(yml, lines, TRUNCATE_EXISTING);
+    }
+
+    public static void removeSettingFromExistingConfiguration(Installation installation, String setting) throws IOException {
+        Path yml = installation.config("elasticsearch.yml");
+        List<String> lines;
+        try (Stream<String> allLines = Files.readAllLines(yml).stream()) {
+            lines = allLines.filter(s -> s.startsWith(setting) == false).collect(Collectors.toList());
         }
         Files.write(yml, lines, TRUNCATE_EXISTING);
     }
+
+    public static void addSettingToExistingConfiguration(Path customConf, String setting, String value) throws IOException {
+        Path yml = customConf.resolve("elasticsearch.yml");
+        List<String> lines;
+        try (Stream<String> allLines = Files.readAllLines(yml).stream()) {
+            lines = allLines.filter(s -> s.startsWith(setting) == false).collect(Collectors.toList());
+        }
+        lines.add(setting + ": " + value);
+        Files.write(yml, lines, TRUNCATE_EXISTING);
+    }
+
+    public static void removeSettingFromExistingConfiguration(Path customConf, String setting) throws IOException {
+        Path yml = customConf.resolve("elasticsearch.yml");
+        List<String> lines;
+        try (Stream<String> allLines = Files.readAllLines(yml).stream()) {
+            lines = allLines.filter(s -> s.startsWith(setting) == false).collect(Collectors.toList());
+        }
+        Files.write(yml, lines, TRUNCATE_EXISTING);
+    }
+
 }
